# SensorTask

./: .gitignore  CMakeLists.txt  Main.cpp  build.sh
Sensor/header/: CMakeLists.txt  Sensor.h  SensorBuilder.h  SensorData.h  SensorManager.h  Util.h
Sensor/src/: CMakeLists.txt  Sensor.cpp  SensorBuilder.cpp  SensorManager.cpp  Util.cpp
